<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="5"
    android:columnCount="1"
    android:orientation="horizontal"
    tools:context=".Direcction1Activity"
    android:background="@color/white"
    >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/map"
            android:onClick="nextActivity33"
            android:drawableLeft="@drawable/ic_map_geo"
            android:background="@color/stn"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/p_dolores"
            android:drawablePadding="@dimen/drawablePadding"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="13pt"
            android:background="@color/orange"
            android:textColor="@color/white"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plaza"
            android:drawablePadding="@dimen/drawablePadding"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="11pt"
            android:background="@color/white"
            android:textColor="@color/orange"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/museum"
            android:drawablePadding="@dimen/drawablePadding"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="13pt"
            android:background="@color/orange"
            android:textColor="@color/white"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/direction_size"
            android:drawablePadding="@dimen/drawablePadding"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="11pt"
            android:background="@color/white"
            android:textColor="@color/orange"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_2"
            android:drawablePadding="@dimen/drawablePadding"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="13pt"
            android:background="@color/orange"
            android:textColor="@color/white"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_two"
            android:drawablePadding="@dimen/drawablePadding"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="11pt"
            android:background="@color/white"
            android:textColor="@color/orange"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/house"
            android:drawablePadding="@dimen/drawablePadding"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="13pt"
            android:background="@color/orange"
            android:textColor="@color/white"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_house"
            android:drawablePadding="@dimen/drawablePadding"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="11pt"
            android:background="@color/white"
            android:textColor="@color/orange"
            />

    </GridLayout>
</ScrollView>
