<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MusicList"
    android:background="@drawable/ici_guitarTwo"
    android:layout_gravity="center">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <Button
            android:id="@+id/btn_Paloma"
            android:layout_width="400dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:onClick="nextActivity5"
            android:text="@string/paloma"
            android:background="@drawable/selector_bgb"
            android:backgroundTint="@color/black"
            android:fontFamily="cursive"
            android:textColor="@color/white"
            android:textSize="26dp"
            android:textStyle="bold"
            android:textAllCaps="false"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_Nube"
            android:layout_width="400dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:onClick="nextActivity6"
            android:text="@string/nubes"
            android:background="@drawable/selector_bgb"
            android:backgroundTint="@color/black"
            android:fontFamily="cursive"
            android:textColor="@color/white"
            android:textSize="26dp"
            android:textStyle="bold"
            android:textAllCaps="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_Guanajuato"
            android:layout_width="400dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:onClick="nextActivity7"
            android:text="@string/caminos"
            android:background="@drawable/selector_bgb"
            android:backgroundTint="@color/black"
            android:fontFamily="cursive"
            android:textColor="@color/white"
            android:textSize="26dp"
            android:textStyle="bold"
            android:textAllCaps="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_Rey"
            android:layout_width="400dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:onClick="nextActivity8"
            android:text="@string/Rey"
            android:background="@drawable/selector_bgb"
            android:backgroundTint="@color/black"
            android:fontFamily="cursive"
            android:textColor="@color/white"
            android:textSize="26dp"
            android:textStyle="bold"
            android:textAllCaps="false"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnVuelta"
            android:layout_width="400dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:text="@string/vuelta"
            android:onClick="nextActivity9"
            android:background="@drawable/selector_bgb"
            android:backgroundTint="@color/black"
            android:fontFamily="cursive"
            android:textColor="@color/white"
            android:textSize="26dp"
            android:textStyle="bold"
            android:textAllCaps="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_Dejan"
            android:layout_width="400dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:text="@string/dejan"
            android:onClick="nextActivity10"
            android:background="@drawable/selector_bgb"
            android:backgroundTint="@color/black"
            android:fontFamily="cursive"
            android:textColor="@color/white"
            android:textSize="26dp"
            android:textStyle="bold"
            android:textAllCaps="false"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_Gracias"
            android:layout_width="400dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:text="@string/gracias"
            android:onClick="nextActivity11"
            android:background="@drawable/selector_bgb"
            android:backgroundTint="@color/black"
            android:fontFamily="cursive"
            android:textColor="@color/white"
            android:textSize="26dp"
            android:textStyle="bold"
            android:textAllCaps="false"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_rienda"
            android:layout_width="400dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:text="@string/rienda"
            android:onClick="nextActivity12"
            android:background="@drawable/selector_bgb"
            android:backgroundTint="@color/black"
            android:fontFamily="cursive"
            android:textColor="@color/white"
            android:textSize="26dp"
            android:textStyle="bold"
            android:textAllCaps="false"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_Cuatro"
            android:layout_width="400dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:onClick="nextActivity13"
            android:text="@string/cuatro"
            android:background="@drawable/selector_bgb"
            android:backgroundTint="@color/black"
            android:fontFamily="cursive"
            android:textColor="@color/white"
            android:textSize="26dp"
            android:textStyle="bold"
            android:textAllCaps="false"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />




    </LinearLayout>



</ScrollView>
